<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
   android:background="#FFFFFF"
    tools:context="com.example.bookatable.AddToWaitList" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/reservationName"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/pleaseEnterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editPhoneNum"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pleaseEnterText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:gravity="center_horizontal"
        android:text="@string/reservationNumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/my_border"
        android:textColor="#FFFFFF"
        android:text="@string/add_to_waitlist" 
        android:onClick="addToWaitList"/>

    <EditText
        android:id="@+id/editPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone" />
	<TextView
        android:id="@+id/addToWaitlistTitle"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/my_border"
        android:ems="10"
        android:gravity="center"
        android:text="@string/enter_info_to_be_added"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>